Prevent the subtitle is wrapped

--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -62,6 +62,7 @@
     font-size 1.3em
     font-weight 300
     letter-spacing .4em
+    white-space nowrap
 
     &:after
       content ''
